# hzmetrics

./: .gitignore  LICENSE  Makefile  README.md  README.txt  __process_tool_metrics.sh  __process_usage_metrics.sh  __process_usage_metrics_summary.sh  _setup_permissions_temp  gen_tool_plots  gen_tool_plots.pl  gen_tool_stats  gen_tool_stats.php  gen_tool_toplists  gen_tool_toplists.php  gen_tool_tops  gen_tool_tops.php  hzmetrics.py  logfix_session  logfix_session.pl  pyproject.toml  xlogfix_andmore_usage  xlogfix_andmore_usage.php  xlogfix_clean  xlogfix_clean.php  xlogfix_dns  xlogfix_dns_v2  xlogfix_dns_v2.sh  xlogfix_dns_worker  xlogfix_dns_worker.php  xlogfix_domain  xlogfix_domain.php  xlogfix_ipcountry  xlogfix_ipcountry.php  xlogfix_middleware_cpu  xlogfix_middleware_cpu.pl  xlogfix_middleware_wall  xlogfix_middleware_wall.pl  xlogfix_plot  xlogfix_plot.pl  (+10 more)
_install/: xsetup_hubmetrics
conf/: hubzero-metrics.cron.apache  hubzero-metrics.cron.d  hzmetrics-logrotate-postrotate.sh  hzmetrics.conf.sample  hzmetrics.cron.apache.sample  hzmetrics.tmpfiles.conf
docs/: README.md  architecture.md  data-flow.md  deployment.md  glossary.md  history.md  motivations.md  operations.md  roadmap.md  summary.md  testing.md  usage-tables.md
gh-pages/: build_site.py  requirements.txt  site.json
import/: __archive_apache_and_auth_log.sh  __fetch_apache_and_auth_log.sh  __import_apache_and_auth_log.sh  xlogfix_identify_bots  xlogfix_identify_bots.php  xlogimport_apache  xlogimport_apache.php  xlogimport_authlog  xlogimport_webhits  xlogimport_webhits.php
includes/: access.cfg  (+6 more)
(+218 files in other folders)
